substrate/frame/support/test/tests/pallet_ui/genesis_inconsistent_build_config.stderr
error: `#[pallet::genesis_config]` and `#[pallet::genesis_build]` attributes must be either both used or both not used, instead genesis_config is unused and genesis_build is used
  --> tests/pallet_ui/genesis_inconsistent_build_config.rs:19:1
   |
19 | mod pallet {
   | ^^^
